# data-process

./: .bumpversion.cfg  .gitignore  AUTHORS.rst  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  setup_pyspark_env.py
history/: history.json
scenario/: etl_ingestion_1.json
src/dlake/base/component/: icompress.py  iconnector.py  icrypt.py  imetadata.py  ispark.py
src/dlake/base/component/compress/: zip.py
src/dlake/base/component/connector/: dynamo.py
src/dlake/base/component/crypt/: pgp.py
src/dlake/base/component/metadata/: dynamo.py  local.py  s3.py
src/dlake/base/config/: Constants.py
src/dlake/base/model/: meta_extract.py  meta_history.py  meta_job.py  meta_load.py  meta_scenario.py
src/dlake/base/service/: extract.py  load.py  udf.py
src/dlake/base/type/: compress.py  crypt.py  env.py  extract.py  key.py  load.py  meta.py  param.py  source.py  spark.py  target.py  udf.py  usecase.py
src/dlake/base/util/: common.py  data.py  date.py  json.py  logger.py  str.py
src/dlake/core/service/: udf.py
src/dlake/core/session/: job.py  spark.py
src/dlake/factory/: etl.py  usecase.py
src/dlake/usecase/: usecase.py
src/dlake/usecase/impl/: us_ingestion.py
src/scripts/: job1.py  job2.py  test.py
tests/: __init__.py
tests/dlake/: __init__.py
tests/dlake/base/component/: test_imetadata.py
tests/dlake/core/component/: test_icrypt.py  test_ispark.py
tests/dlake/core/session/: test_spark_session_init.py
tests/dlake/core/util/: test_str.py
tests/dlake/factory/: test_usecase.py
(+6 files in other folders)
