[metadata]
name = dlake-process
author = Sinh
version = 0.2.0
author_email = hvsinh@cmcglobal.vn
description = A library for offline model-based reinforcement learning.
long_description = file:README.md
long_description_content_type = text/markdown
url = https://cmcglobal.vn


[options]
python_requires = >=3.9
packages = find:
package_dir =
    =src
install_requires =
    numpy

[options.packages.find]
where = src


[options.extras_require]
dev =
    tox
    %(lint)s
    %(test)s
    %(doc)s
    %(build)s

lint =
    isort
    black
    mypy
    pylint
    pytest
    pydocstyle[toml]
    types-setuptools

test =
    pytest
    pytest-cov
    coverage[toml]
    pytest-randomly

doc =
    sphinx
    sphinx_rtd_theme

build =
    build[virtualenv]